# stakecubecoin-archive

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  background.tiff  configure.ac  pkg.m4
src/: Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.cpp  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  banned.cpp  banned.h  base58.h  bignum.h  bip38.h  blocksignature.cpp  blocksignature.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  concurrentqueue.h  (+146 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: lightpaycoin-config.h.in  stakecube-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/leveldb/util/: env_win.cc
src/libzerocoin/: CoinSpend.h  Denominations.cpp  SpendType.h  bignum.h
src/masternode/: activemasternode.cpp  activemasternode.h  masternode-budget.cpp  masternode-budget.h  masternode-payments.cpp  masternode-payments.h  masternode-sync.cpp  masternode-sync.h  masternode.cpp  masternode.h  masternodeconfig.cpp  masternodeconfig.h  masternodeman.cpp  masternodeman.h  messagesigner.cpp  messagesigner.h
src/minizip/: .gitignore  Makefile.am  configure.ac  miniunz.c  minizip.c  minizip.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: CMakeLists.txt  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  announcementview.cpp  announcementview.h  annwidget.cpp  annwidget.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bip38tooldialog.cpp  bip38tooldialog.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  configuremasternodepage.cpp  configuremasternodepage.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  governancepage.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  lightpaycoin.cpp  (+94 more)
src/qt/forms/: addressbookpage.ui  announcementview.ui  annwidget.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  multisenddialog.ui  multisigdialog.ui  obfuscationconfig.ui  optionsdialog.ui  overviewpage.ui  privacydialog.ui  proposaldialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  startoptions.ui  startoptionsdialog.ui  startoptionsmain.ui  startoptionssort.ui  tradingdialog.ui  zphrcontroldialog.ui  zpivcontroldialog.ui
src/qt/locale/: lightpaycoin_bg.ts  lightpaycoin_ca.ts  lightpaycoin_cs.ts  lightpaycoin_da.ts  lightpaycoin_de.ts  lightpaycoin_en.ts  lightpaycoin_en_US.ts  lightpaycoin_es.ts  lightpaycoin_fi.ts  lightpaycoin_fr_FR.ts  lightpaycoin_it.ts  lightpaycoin_ja.ts  lightpaycoin_ko_KR.ts  lightpaycoin_nl.ts  lightpaycoin_pl.ts  lightpaycoin_pt.ts  lightpaycoin_pt_BR.ts  lightpaycoin_ro_RO.ts  lightpaycoin_ru.ts  lightpaycoin_sk.ts  lightpaycoin_sv.ts  lightpaycoin_uk.ts  lightpaycoin_zh_CN.ts  lightpaycoin_zh_TW.ts  monetaryunit_bg.ts  monetaryunit_ca.ts  monetaryunit_cs.ts  monetaryunit_da.ts  monetaryunit_de.ts  monetaryunit_en.ts  monetaryunit_en_US.ts  monetaryunit_es.ts  monetaryunit_fi.ts  monetaryunit_fr_FR.ts  monetaryunit_hr.ts  monetaryunit_it.ts  monetaryunit_ja.ts  monetaryunit_ko_KR.ts  monetaryunit_nl.ts  monetaryunit_pl.ts  (+91 more)
src/qt/pivx/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addresslabelrow.cpp  coincontrolpivwidget.cpp  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  denomgenerationdialog.cpp  expandablebutton.cpp  furabstractlistitemdelegate.cpp  lockunlock.h  (+53 more)
src/rpc/: blockchain.cpp  budget.cpp  client.cpp  client.h  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: bitcoinconsensus.h  interpreter.h  script.cpp  script.h  script_error.h  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.in  aclocal.m4  configure
src/support/: cleanse.h
src/test/: DoS_tests.cpp  README.md  bignum.h  bip39_tests.cpp  bloom_tests.cpp  budget_tests.cpp  checkblock_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  sighash_tests.cpp  skiplist_tests.cpp  test_lightpaycoin.cpp  test_monetaryunit.cpp  test_pivx.cpp  test_pivx.h  test_stakecube.cpp  test_stakecubecoin.cpp  test_zerocoin.cpp  transaction_tests.cpp  zerocoin_coinspend_tests.cpp  zerocoin_denomination_tests.cpp  zerocoin_implementation_tests.cpp  zerocoin_transactions_tests.cpp
src/wallet/: arrayslice.h  bip39.h  crypter.cpp  crypter.h  db.h  hdchain.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
src/zpiv/: accumulatorcheckpoints.h  accumulatorcheckpoints.json.h  accumulatormap.cpp  accumulatormap.h  accumulators.cpp  accumulators.h  deterministicmint.h  mintpool.h  witness.h  zerocoin.h  zpivmodule.cpp  zpivmodule.h  zpivtracker.cpp  zpivtracker.h  zpivwallet.cpp  zpivwallet.h
(+200 files in other folders)
